# LearnSFML

./: .gitignore  README.md
Pong/: CMakeLists.txt
Pong/inc/: ball.h  paddle.h
Pong/src/: ball.cpp  main.cpp  paddle.cpp
